fix(ProductCard.module.css): update overflow property to hidden

--- a/apps/user/src/components/Product/ProductCard.module.css
+++ b/apps/user/src/components/Product/ProductCard.module.css
@@ -3,7 +3,7 @@
   max-width: 300px;
   width: 100%;
   border-radius: 12px;
-  overflow: visible;
+  overflow: hidden;
   background-color: #fff;
 }
 
